--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    dependencies {
-        implementation 'com.android.support:recyclerview-v7:28.0.0'
-    }
+    // recycler view
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
 }
