--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,10 @@ dependencies {
 
     // recycler view
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+
+    //noinspection GradleCompatible
+    implementation "com.android.support:design:28.0.0" // this should probably be updated
+
+//    implementation "com.google.android.material:material:1.2.0-alpha03"
+//    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
 }
