--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,7 @@ dependencies {
 
     //noinspection GradleCompatible
     implementation "com.android.support:design:28.0.0" // this should probably be updated
+
+    implementation "androidx.room:room-runtime:2.2.3"
+    annotationProcessor "androidx.room:room-compiler:2.2.3"
 }
