implement quick and nasty image storage that draws from external image storage

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ContentActivity" />
+        <activity android:name=".DetailsActivity" />
         <activity android:name=".ContentListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
